# petor-django

./: README.md  petor.json  petor.toml
{{ petor.project.slug }}/: .env.example  manage.py  pyproject.toml
{{ petor.project.slug }}/config/: asgi.py  urls.py  wsgi.py
{{ petor.project.slug }}/config/settings/: base.py  local.py  production.py
{{ petor.project.slug }}/src/config/: asgi.py  wsgi.py
{{ petor.project.slug }}/src/config/settings/: base.py
{{ petor.project.slug }}/src/core/management/commands/: startapp.py
{{ petor.project_slug }}/: manage.py  pyproject.toml
{{ petor.project_slug }}/src/config/: asgi.py  urls.py  wsgi.py
{{ petor.project_slug }}/src/config/settings/: base.py
